--- a/Tokio_fiap_sales2024/src/Exercícios/.gitignore
+++ b/Tokio_fiap_sales2024/src/Exercícios/.gitignore
@@ -16,3 +16,10 @@
 /Exercício_06_03.class
 /Exercício_06_04.class
 /Exercício_06_05.class
+/Exercício_07_01.class
+/Exercício_07_02.class
+/Exercício_07_03.class
+/Exercício_07_04.class
+/Exercício_07_05.class
+/Exercício_07_06.class
+/Exercício_07_07.class
