--- a/Tokio_fiap_sales2024/src/Exercícios/.gitignore
+++ b/Tokio_fiap_sales2024/src/Exercícios/.gitignore
@@ -23,3 +23,12 @@
 /Exercício_07_05.class
 /Exercício_07_06.class
 /Exercício_07_07.class
+/Exercício_07_08.class
+/Exercício_07_09.class
+/Exercício_07_10.class
+/Exercício_08_01.class
+/exercício_08_02.class
+/Exercício_08_03.class
+/Exercício_08_04.class
+/Exercício_08_05.class
+/Exercícios_08_06.class
